<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeopleActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchPeopleInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="#ecf0f1"
        android:hint="@string/searchPeople"
        android:textColor="#ecf0f1"
        android:textColorHighlight="#ecf0f1"
        android:textColorHint="#ecf0f1"
        android:textColorLink="#ecf0f1"
        app:layout_constraintBottom_toTopOf="@+id/errorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchPeopleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBtn"
        android:onClick="btnPeopleSearch_onClick"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/listPeopleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorBtn"
        android:onClick="btnPeopleList_onClick"
        android:text="@string/peopleList"
        app:layout_constraintBottom_toTopOf="@+id/errorView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/errorView"
        android:layout_width="387dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPeopleInput">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <TextView
                android:id="@+id/searchPeopleTextView"
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
        </HorizontalScrollView>
    </ScrollView>

    <Button
        android:id="@+id/testNtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:background="@color/colorBtn"
        android:text="nt"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>